# hodeauxledger-rust-legacy-prenoun

./: Cargo.toml  README.md  usherd_config.json
docs/: CONTEXT.md  INTENT.md  RHEX.md  SIGNATURE.md  SIGNATURES.md
hl-core/src/authority/: authority.rs
hl-core/src/key/: key.rs
hl-core/src/rhex/: rhex.rs
hl-core/src/scope/: scope.rs
hl-core/src/usher/: usher.rs
hl-io/src/db/: scope.rs
hl-io/src/fs/: rhex.rs
hl-services/src/: lib.rs
hl-services/src/process/processor/: mod.rs  signatures.rs
hl-services/src/request/: mod.rs
hl-services/src/scope/: get.rs  mod.rs
keytool/: Cargo.toml
keytool/src/: argv.rs  b64.rs  main.rs  selfid.rs  sign.rs
usher/: Cargo.toml
usher/src/: argv.rs  find.rs  head.rs  main.rs
usherd/src/: httpd.rs
