[workspace]
members = [ "genesis",
  "hl-core",
  "hl-io",
  "hl-services",
  "keytool",
  "rhex-craft",
  "usher",
  "usherd",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "CC 4.0"

# Centralize versions to keep the tree sane
[workspace.dependencies]
anyhow = "1"
blake3 = "1.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
serde_bytes = "0.11"
ciborium = "0.2"         # CBOR
ed25519-dalek = "2"
rand = "0.9"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
getrandom = "0.3.3"
argon2 = "0.5"
aes-gcm = "0.10.3"
zeroize = "1.8.1"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
base32 = "0.5"
regex = "1.11"
subtle = "2"
once_cell = "1.21"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }