[package]
name = "usher"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

hl-core = { path = "../hl-core" }
hl-io = { path = "../hl-io" }
hl-services = { path = "../hl-services" }